<resources>
    <string name="app_name">드로잉투게더</string>

    <!-- Ted Permission -->
    <string name="permission">[설정]-[애플리케이션]-[시시콜콜]-[권한]에서 권한을 허용할 수 있습니다.</string>

    <!-- Kakao App Key -->
    <string name="kakao_app_key">1c67e4a427399c4e4f83d2bd9ff1ba48</string>
    <string name="kakao_scheme">kakao1c67e4a427399c4e4f83d2bd9ff1ba48</string>
    <string name="kakaolink_host">kakaolink</string>

    <!-- Dialog Content -->
    <string name="master_exit">종료하시겠습니까?</string>
    <string name="joiner_exit">나가시겠습니까?</string>
    <string name="success_save">갤러리에 대화 이미지를 저장 완료했습니다</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="save_exit">저장 후 종료</string>


    <!-- Tester -->
    <!-- Button -->
    <string name="set_test_parameter">파라미터 설정</string>
    <string name="test_start">측정 시작</string>
    <string name="test_finish">측정 완료</string>
    <string name="test_env_set">환경 구축</string>
    <string name="test_env_clear">초기화</string>

    <!-- Dialog -->
    <string name="background_title">화면 스트로크 개수</string>
    <string name="background_segment_title">화면 스트로크 세그먼트 개수</string>
    <string name="sending_title">전송 스트로크 개수</string>
    <string name="sending_segment_title">전송 스트로크 세그먼트 개수</string>
    <string name="count_title">반복 횟수</string>
    <string name="test_parameter_validation_text">유효한 값을 입력해주세요</string>
    <string name="msg_sending_start">측정 메시지 전송 시작</string>

    <!-- App Info -->
    <string name="info_title"><font color='#15A0E8'>사용 방법 및 설명</font></string>
    <string name="info">
        <font color='#15A0E8'><b>step1</b></font> 회의명, 비밀번호, 이름을 입력합니다. \n
        (카카오톡 초대 링크로 앱을 실행한 경우, 회의명과 비밀번호는 자동으로 입력됩니다.) \n\n

        <font color='#15A0E8'><b>step2</b></font> <u>회의 시작하기</u> 또는 <u>회의 참가하기</u> 버튼을 눌러서 회의에 입장합니다. \n\n

        <u>회의 시작하기</u>는 입력한 회의명으로 새로운 회의방을 개설하는 것을 의미합니다. \n

        회의 시작하기를 통해 입장한 사용자는 회의방을 처음으로 생성한 사용자이자 <u>마스터</u>권한을 부여 받습니다. 마스터는 일종의 <u>방장</u> 개념이며, <u>마스터가 회의방에서 퇴장할 시 해당 회의방은 사라집니다.</u> \n\n

        <u>회의 참가하기</u>는 입력한 회의명에 해당되는 회의방에 참여하는 것을 의미합니다. \n

        회의 참가하기를 통해 입장한 사용자는 자유롭게 회의방 퇴장 및 재 참여가 가능하며 <u>마스터가 회의방을 퇴장할 시 모든 사용자는 자동으로 퇴장됩니다.</u> \n\n

        <font color='#15A0E8'><b>step3</b></font> 회의 참가 후 하단의 드로잉 메뉴들과 상단의 이미지 공유 메뉴를 사용하여 그림 및 텍스트, 이미지를 참가자들과 공유합니다.
    </string>

</resources>
